fix some layout issues on main page

--- a/src/sass/ui.scss
+++ b/src/sass/ui.scss
@@ -1,8 +1,11 @@
 @import 'utils/reset';
+@import 'utils/misc';
 @import 'utils/fonts';
 @import 'utils/colors';
 
 @import 'ui/window';
+@import 'ui/tabs';
+@import 'ui/notes';
 @import 'ui/scroll';
 @import 'ui/grid';
 @import 'ui/text';
@@ -35,31 +38,29 @@
 }
 
 .envs-title {
-    min-height: 20px;
+    padding: 8px 0;
 }
 
 .env-list {
     padding: 0;
-    margin-top: 8px;
 
     .env-list-item {
         .cols [class*='col-'] {
             padding: 0 4px;
         }
 
-        &:hover {
-            background-color: rgba(255,255,255,.05);
+        .actions {
+            transform: translateX(4px);
         }
 
-        padding: 8px 4px;
-        padding-left: 8px;
-        border-top: 1px solid rgba(255,255,255,.05);
+        padding: 8px 0;
+        border-bottom: 1px solid rgba(255,255,255,.05);
         line-height: 20px;
         height: 38px;
         font-size: 14px;
 
         &:last-child {
-            border-bottom: 1px solid rgba(255,255,255,.05);
+            border-bottom: 0;
         }
     }
 }
@@ -103,6 +104,50 @@
         .icon {
             height: 64px;
             width: 64px;
+        }
+    }
+}
+
+.virtual-files-list {
+    .file {
+        font-size: 0;
+        padding: 8px;
+        border: 1px solid rgba(255,255,255,.05);
+        margin-top: 8px;
+        padding-left: 0;
+        
+        .pre-icon-file {
+            width: 30px;
+            text-align: center;
+            color: #fff;
+            display: inline-block;
+        }
+
+        .close {
+            width: 24px;
+        }
+
+        input, textarea {
+            -webkit-appearance: none;
+            background: transparent;
+            border: 0;
+            border-bottom: 1px solid $purple;
+            color: $cyan;
+            width: calc(100% - 60px);
+            line-height: 18px;
+            font-size: 12px;
+            padding: 4px 0;
+        }
+        
+        textarea {
+            height: 40px;
+            margin-left: 30px;
+            margin-bottom: 8px;
+            resize: none;
+
+            &:focus {
+                height: 200px;
+            }
         }
     }
 }
