--- a/src/sass/utils/_fonts.scss
+++ b/src/sass/utils/_fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
     font-family: Menlo;
-    src: url('../fonts/menlo.ttf');
+    src: url('../../assets/fonts/menlo.ttf');
 }
